--- a/ptp_rus/localisation/diplo_phrases/mec_asari_diplo_l_russian.yml
+++ b/ptp_rus/localisation/diplo_phrases/mec_asari_diplo_l_russian.yml
@@ -90,5 +90,5 @@
  ####################################
  # Asari Ascendancy
  ####################################
- personality_mec_asari_ai_asc:0 "Dominant Descendants"
- personality_mec_asari_ai_asc_desc:0 "Dominant Descendants seek to restore the empire of their ancient benefactors. Whether by subjugation or diplomacy, they will lead the galaxy unto a new era of greatness."
+ personality_mec_asari_ai_asc:0 "Доминантные потомки"
+ personality_mec_asari_ai_asc_desc:0 "Доминантные потомки стремятся восстановить империю своих древних покровителей. Путем подчинения или дипломатии они приведут галактику к новой эре величия."
