--- a/ptp_rus/localisation/russian/Elven_l_russian.yml
+++ b/ptp_rus/localisation/russian/Elven_l_russian.yml
@@ -24,7 +24,7 @@ elven_system_gaul_initializer_NAME:0 "Двойной карлик"
 elven_system_gaul_initializer_DESC:0 "§LБинарная система, состоящая из звезды класса F в паре с коричневым карликом.§!\n\n$system_initializer_DESC$"
 
 ####################################
-# Origins 
+# Origins
 ####################################
 
 origin_elven_foundations:0 "Эльфийский фундамент"
@@ -212,7 +212,7 @@ civic_elven_tooltip_not_materialistic:0 "Не §YМатериалисты§!"
 agenda_elven_isolationism:0 "Экономическая уверенность"
 
 ####################################
-# Policies 
+# Policies
 ####################################
 
 policy_elven_gender_policy:0 "Политика в отношении полов"
@@ -258,15 +258,48 @@ gov_elven_druid_circle:0 "Круг друидов"
 gov_elven_druid_circle_desc:0 "Это правительство - спиритическая форма олигархии, где круг мудрых друидов контролирует государство. Не существует разделения между государством и кругом."
 
 ####################################
-# Nations 
+# Nations
 ####################################
 
-EMPIRE_DESIGN_elven_civ1:0 "Безмятежное королевство Сенелаты"
+EMPIRE_DESIGN_elven_civ1:0 "Безмятежное королевство Сенелата"
 EMPIRE_DESIGN_elven_civ1_desc:0 "Ксеноисторики нехотя признают, что Айлейды, кажется, всегда существовали на своём родном мире. Основная гипотеза, независимо от того, принимают её Айлейды или нет, состоит в том, что они были частью крупной межзвездной империи задолго до первых исторических записей. Давно утеряны знания о том, как она называлась или как широко простиралась.\n\nНезависимо от происхождения, они теперь стремятся играть более активную роль за пределами своей системы. Их спокойствие и бескорыстность не следует недооценивать, поскольку, как известно, они становились смертельно опасными, когда их провоцировали на насилие.\n"
+ELVEN_civ1_empire_adjective: "Айлейд"
+ELVEN_civ1_species_name: "Айлейд"
+ELVEN_civ1_species_plural: "Айлейды"
+ELVEN_civ1_species_adjective: "Айлейд"
+ELVEN_civ1_ruler_title: "Великий король"
+ELVEN_civ1_ruler_title_female: "Великая королева"
+ELVEN_civ1_heir_title: "Принц"
+ELVEN_civ1_heir_title_female: "Принцесса"
+ELVEN_civ1_ruler_name: "Эления Аллория"
+ELVEN_civ1_homeworld_name: "Сенелата"
+ELVEN_civ1_home_system_name: "Аноралас"
+
 EMPIRE_DESIGN_elven_civ2:0 "Айнарский круг"
 EMPIRE_DESIGN_elven_civ2_desc:0 "Древние Айнари состояли из различных племен, часто борющихся за территорию или ресурсы. Одним из таких ресурсов являются сильные, но медленные энты. Очень мощные, но невероятно раболепные, они были и остаются в основном рабочими.\n\nЖизнь продолжалась как обычно, пока не появилась серьезная угроза. Специфика была утеряна во времени, но это была угроза исчезновения. Племена объединились и победили.\n\nС тех пор Айнари постепенно расширились вместе со своими покорными слугами, чтобы захватить весь их мир. Они сохранили свою племенную природу, но отказались от мелкой борьбы своих предков.\n\nПоследние технологические достижения позволили Айнари увидеть жизнь за пределами их родного мира. Несмотря на то, что в целом они дружелюбны, следует отметить, что они не потеряли своей тенденции объединяться в борьбе с угрозами.§!\n"
+ELVEN_civ2_empire_adjective: "Айнар"
+ELVEN_civ2_species_name: "Айнар"
+ELVEN_civ2_species_plural: "Айнари"
+ELVEN_civ2_species_adjective: "Айнар"
+ELVEN_civ2_ruler_title: "Старший друид"
+ELVEN_civ2_ruler_title_female: "Старший друид"
+ELVEN_civ2_ruler_name: "Ланда Адеканем"
+ELVEN_civ2_homeworld_name: "Селлика"
+ELVEN_civ2_home_system_name: "Адаренон"
+
 EMPIRE_DESIGN_elven_civ3:0 "Аурлюнор Веландэ"
 EMPIRE_DESIGN_elven_civ3_desc:0 "Очень мало известно об Аурлюноре, сокрытом среди плотного скопления звезд Драконьего Кластера. Из-за малого взаимодейтсвия с другими народами, там появилась цивилизация, сосредоточенная вокруг порядка и единообразия. Любые угрозы такому порядку чаще всего подавляются насильственными методами.\n"
+ELVEN_civ3_empire_adjective: "Аурлюнор"
+ELVEN_civ3_species_name: "Льхюрен"
+ELVEN_civ3_species_plural: "Льхюрены"
+ELVEN_civ3_species_adjective: "Льхюрен"
+ELVEN_civ3_ruler_title: "Веланар"
+ELVEN_civ3_ruler_title_female: "Велерет"
+ELVEN_civ3_heir_title: "Аранор"
+ELVEN_civ3_heir_title_female: "Аранет"
+ELVEN_civ3_ruler_name: "Сареариэль Лелиа-Эаркала"
+ELVEN_civ3_homeworld_name: "Льхумар"
+ELVEN_civ3_home_system_name: "Аурлюнор"
 
 #############
 ### STARS ###
