--- a/ptp_rus/localisation/russian/ascended_empire_subjects_l_russian.yml
+++ b/ptp_rus/localisation/russian/ascended_empire_subjects_l_russian.yml
@@ -1,22 +1,37 @@
 ﻿l_russian:
 
 
- SUBJECT_fe_clan_member:0 "Член клана"
- SUBJECT_DESC_fe_clan_member:0 "Члены клана - это тип субъектов, которые являются дипломатически независимыми, но платят §Y25%§! от ежемесячной выработки минералов и сплавов своему сюзерену. Они находятся под защитой сюзерена и должны воевать вместе с ним."
- SUBJECT_fe_demilitarized_state:0 "Демилитаризованное государство"
- SUBJECT_DESC_fe_demilitarized_state:0 "Демилитаризованные государства - это тип субъектов, которые дипломатически подчиняются и защищаются их сюзереном, но им разрешено колонизировать планеты. Также они должны передавать часть своего лимита флота сюзерену и платить §Y25%§! от ежемесячной выработки влияния и единства своему сюзерену."
- SUBJECT_fe_puppet_state:0 "Марионеточное государство"
- SUBJECT_DESC_fe_puppet_state:0 "Марионеточные государства - это тип субъектов, которые являются дипломатически независимыми, но платят §Y25%§! от ежемесячной выработки единства и минералов своему сюзерену. Они также вынуждены принять этики своего сюзерена."
- SUBJECT_fe_union_state:0 "Союзное государство"
- SUBJECT_DESC_fe_union_state:0 "Союзные государства - это тип субъектов, которые дипломатически подчиняются и защищаются их сюзереном, но им разрешено колонизировать планеты. Также они обязаны выплачивать §Y25%§! от ежемесячной выработки энергокредитов и влияния своему сюзерену, и могут быть интегрированы."
- SUBJECT_fe_satrapy:0 "Сатрапия"
- SUBJECT_DESC_fe_satrapy:0 "Сатрапии - это тип субъектов, которые платят §Y10%§! от ежемесячной выработки энергокредитов и §Y20%§! от ежемесячной добычи минералов как подношение Орде. Также они должны передавать часть своего лимита флота сюзерену."
- SUBJECT_fe_symbiote:0 "Симбионт"
- SUBJECT_DESC_fe_symbiote:0 "Симбионты - это тип субъектов, которые являются дипломатически независимыми, но платят §Y25%§! от ежемесячной выработки пищи и минералов своему сюзерену. Они могут вести экспансию, но должны помогать сюзерену в обороне и могут быть интегрированы."
- SUBJECT_fe_auxiliary:0 "Вспомогательный юнит"
- SUBJECT_DESC_fe_auxiliary:0 "Вспомогательные юниты - это тип субъектов, которые являются дипломатически независимыми, но платят §Y25%§! от ежемесячной выработки минералов и энергокредитов своему сюзерену. Они могут вести экспансию, но должны помогать сюзерену в обороне."
- SUBJECT_banished_ascendancy:0 "Изгнанная империя"
- SUBJECT_DESC_banished_ascendancy:0 "Эта изгнанная империя некогда была одной из величайших цивилизаций в галактике, но пала от одного из своих соперников. Она связана строгим договором со своим сюзереном."
+ preset_fe_clan_member:0 "Член клана"
+ preset_fe_clan_member_desc:0 "Члены клана - это тип субъектов, которые являются дипломатически независимыми, но платят весомую ежемесячную подать ресурсами своему сюзерену."
+ preset_fe_clan_member_flavor_desc:0 "Член клана служит в качестве подданного Вознесенной империи, которая считает его частью своего клана. Они должны платить дань и доказывать свою состоятельность, чтобы пользоваться преимуществами, которые дает членство в клане, и быть готовыми защищать клан, когда это потребуется."
+
+ preset_fe_demilitarized_state:0 "Демилитаризованное государство"
+ preset_fe_demilitarized_state_desc:0 "Демилитаризованные государства - это тип субъектов, которые дипломатически подчиняются и защищаются их сюзереном, но им разрешено колонизировать планеты. Также они должны передавать часть своего лимита флота сюзерену и платить ежемесячную подать стратегическими ресурсами своему сюзерену."
+ preset_fe_demilitarized_state_flavor_desc:0 "Демилитаризованное государство - это тип субъекта, который в принципе согласился на сокращение вооружений в пределах своих границ в обмен на мир и защиту от своего повелителя. Или, как мог бы сказать их Вознесенный владыка, оружие просто слишком опасно в руках детей."
+
+ preset_fe_puppet_state:0 "Марионеточное государство"
+ preset_fe_puppet_state_desc:0 "Марионеточные государства - это тип субъектов, которые являются дипломатически независимыми, но платят весомую ежемесячную подать своему сюзерену."
+ preset_fe_puppet_state_flavor_desc:0 "Марионеточное государство - это, прежде всего, марионетка своего Вознесенного владыки. Несмотря на фасад независимой дипломатии, они должны подчиняться прихотям своего повелителя и вести себя хорошо, чтобы оставаться на хорошем счету."
+
+ preset_fe_union_state:0 "Союзное государство"
+ preset_fe_union_state_desc:0 "Союзные государства - это тип субъектов, которые дипломатически подчиняются и защищаются их сюзереном, но им разрешено колонизировать планеты. Также они обязаны выплачивать небольшую ежемесячную подать ресурсами своему сюзерену"
+ preset_fe_union_state_flavor_desc:0 "Союзное государство служит ярким примером идеалистического видения будущего их Вознесенного владыки, где галактика в конечном итоге объединится под их эгалитарными ценностями, вольно или невольно."
+
+ preset_fe_satrapy:0 "Сатрапия"
+ preset_fe_satrapy_desc:0 "Сатрапии - это тип субъектов, которые платят небольшую ежемесячную подать ресурсами как подношение Орде. Также они должны передавать часть своего лимита флота сюзерену."
+ preset_fe_satrapy_flavor_desc:0 "Сатрапия служит подданным своего владыки. Склонившись перед военной мощью Вознесенной империи, они получили право управлять своим регионом галактики. Пока они продолжают поддерживать кораблями и ресурсами продолжающиеся завоевания своего повелителя, они могут заниматься своими делами."
+
+ preset_fe_symbiote:0 "Симбионт"
+ preset_DESC_fe_symbiote:0 "Симбионты - это тип субъектов, которые являются дипломатически независимыми, но платят небольшую ежемесячную подать ресурсами своему сюзерену."
+ preset_fe_symbiote_flavor_desc:0 "Симбионт служит Вознесенному разуму Улья, который стремится к миру и сосуществованию в обмен на ресурсы."
+
+ preset_fe_auxiliary:0 "Вспомогательный юнит"
+ preset_DESC_fe_auxiliary:0 "Вспомогательные юниты - это тип субъектов, которые являются дипломатически независимыми, но платят небольшую ежемесячную подать ресурсами своему сюзерену."
+ preset_fe_auxiliary_flavor_desc:0 "Вспомогательный юнит служит подданным Вознесенной империи машин, которая обещает защиту в обмен на ресурсы."
+
+ preset_banished_ascendancy:0 "Изгнанная вознесённая империя"
+ preset_DESC_banished_ascendancy:0 "Эта изгнанная вознесённая империя некогда была одной из величайших цивилизаций в галактике, но пала от одного из своих соперников. Она связана особо суровым договором, чтобы предотвратить её повторное вознесение."
+ preset_banished_ascendancy_flavor_desc:0 "Изгнанная вознесённая империя - это некогда вознесённая империя на вершине уровня развития цивилизации, которая была низвергнута одним из своих соперников и в конечном итоге была порабощена. Чтобы они никогда не смогли вернуться к власти, были навязаны особо суровые условия."
 
  casus_belli_cb_ascended_empire_claim:0 "$casus_belli_cb_claim$"
  casus_belli_cb_ascended_empire_claim_acquire_hint:0 "$casus_belli_cb_claim_acquire_hint$"
