--- a/ptp_rus/localisation/russian/fatalf_02_l_russian.yml
+++ b/ptp_rus/localisation/russian/fatalf_02_l_russian.yml
@@ -1,7 +1,13 @@
 ﻿l_russian:
- OVERGROWTH: "Мицелий"
- edict_fatalf_manager: "Настройки Fatal Foundations"
  edict_fatalf_manager_desc: "Используйте это меню для изменения различных аспектов событий Fatal Foundations. Нестабильность определяет вероятность случайных событий и аномалий. Другие - определяют, возможны ли определенные события и кризисы."
+ edict_fatalf_manager: "Настройки Fatal Foundations"
+ fatalf_hyperlane_1.desc: "Здесь скоро появится новый временный гиперкоридор. Мы предполагаем, что он просуществует не более одного года."
+ fatalf_hyperlane_1.name: "Новое местоположение гиперкоридора"
+ fatalf_mysterious_portal: "Мистический портал"
+ fatalf_mysterious_portal_desc: "Мы можем изучить этот портал и вещи, которые из него появляются."
+ fatalf_spica: "Употребление «колосьев»"
+ fatalf_spica_text: "Употребление «колосьев»"
+ fatalf_spica_withdrawl: "Последствия от «колосьев»"
  fatalf.054.desc: "Все активные L-врата начали излучать серию импульсов, наши датчики регистрируют начало деструктуризации сети гиперкоридоров по всей галактике. Кажется, причина кроется в L-вратах, разбросанных по всей Галактике, а это значит, что пока мы не возьмём под контроль их все и не изучим, гиперкоридоры будут продолжать непредсказуемо меняться."
  fatalf.054.title: "L-врата снова активны"
  fatalf.055.desc: "Теперь, когда L-кластер открыт, L-врата начали подключаться к сети гиперкоридоров. Но, как ни странно, ваши датчики дальнего действия фиксируют серию мощных импульсов, исходящих от них, они нарушают работу всей сети гиперкоридоров. Если мы хотим найти причину, нам придётся взять под свой контроль все L-врата в галактике."
@@ -12,11 +18,11 @@
  fatalf.059.title: "Неожиданные системы"
  fatalf.060.desc: "Несколько тысяч жителей нашей империи внезапно прекратили свою деятельность и начали собирать материалы для строительства нескольких сооружений неизвестного назначения. Все попытки поговорить с ними были безуспешными."
  fatalf.060.title: "Странные действия"
- fatalf.061.desc: "Достаточно быстро эти сооружения были завершены. Все граждане принимавшие участие в возведении структур, сейчас стоят на месте и одновременно произносят слова.\n §M<МЫ АРХИТЕКТОРЫ, МЫ ПОМОГАЕМ, НЕ ПЛОХИЕ, ХОТИМ УСПЕХА, НЕ ВСЕ ЗАБОТЯТСЯ, ХОТИМ ПОБЕДЫ, СКОРО ТРУДНОСТИ, ПРИМИТЕ ПОМОЩЬ, ВМЕШАТЬСЯ>"
- fatalf.061.title: "АРХИТЕКТОРЫ"
  fatalf.061_a_tooltip: "У всех поселений §Y[Root.Owner.GetSpeciesName]§! появится черта §Y$trait_architect_adaptive_good$§!, дающая: \n§Y$MOD_POP_ENVIRONMENT_TOLERANCE$§! +15%, §Y$MOD_POP_GROWTH_SPEED$§! -20%."
  fatalf.061_b_tooltip: "У всех поселений §Y[Root.Owner.GetSpeciesName]§! появится черта §Y$trait_architect_intelligent_good$§!, дающая: \n §YОчки исследований§! +10%, §Y$MOD_POP_GOVERNMENT_ETHIC_ATTRACTION$§! -30%."
  fatalf.061_c_tooltip: "У всех поселений §Y[Root.Owner.GetSpeciesName]§! появится черта §Y$trait_architect_industrious_good$§!, дающая: \n §YПроизводство минералов и ТМС$§! +10%, §Yпроизводство пищи§! -15%."
+ fatalf.061.desc: "Достаточно быстро эти сооружения были завершены. Все граждане принимавшие участие в возведении структур, сейчас стоят на месте и одновременно произносят слова.\n §M<МЫ АРХИТЕКТОРЫ, МЫ ПОМОГАЕМ, НЕ ПЛОХИЕ, ХОТИМ УСПЕХА, НЕ ВСЕ ЗАБОТЯТСЯ, ХОТИМ ПОБЕДЫ, СКОРО ТРУДНОСТИ, ПРИМИТЕ ПОМОЩЬ, ВМЕШАТЬСЯ>"
+ fatalf.061.title: "АРХИТЕКТОРЫ"
  fatalf.064.desc: "Когда мы приняли таинственное предложение, структуры начали дико дрожать, пока не рухнули. Кажется, нет никаких очевидных изменений.\n\n§M<СДЕЛАЙТЕ ЧТО МОЖЕТЕ, ХОРОШИЙ ЦИКЛ - РАВНЫЙ, ПОЗЖЕ ПЛОХОЙ ЦИКЛ - ВЫ НАЧНЁТЕ>"
  fatalf.064.title: "ХОРОШО"
  fatalf.065.desc: "Когда мы отвергли таинственное предложение, все граждане принимавшие участие в возведении структур, в ту же секунду упали на землю замертво.\n\n§M<ВЫ ГЛУПЦЫ, МЫ ПОМОЖЕМ, НЕ ВАМ>"
@@ -68,21 +74,13 @@
  fatalf.machine_activate.tip: "§RСеть гиперкоридоров будет полностью перезагружена, также это откроет скрытые системы.§!"
  fatalf.machine_dismantled.tip: "§RСеть гиперкоридоров стабилизируется, она обладает новыми эффектами, позволяющими быстрее перемещаться в гиперпространстве.§!"
  fatalf.machine_running.tip:0 "§RСеть гиперкоридоров продолжит работать нестабильно, но возможность по её исследованию останется.§!"
- fatalf_hyperlane_1.desc:0 "Здесь скоро появится новый временный гиперкоридор. Мы предполагаем, что он просуществует не более одного года."
- fatalf_hyperlane_1.name: "Новое местоположение гиперкоридора"
- fatalf_mysterious_portal: "Мистический портал"
- fatalf_mysterious_portal_desc: "Мы можем изучить этот портал и вещи, которые из него появляются."
- fatalf_spica: "Употребление «колосьев»"
- fatalf_spica_text: "Употребление «колосьев»"
- fatalf_spica_withdrawl: "Последствия от «колосьев»"
  name_list_Overgrowth: "Мицелий"
- opinion_fatalf_lost_country: "Поддержали нашу колонию"
- opinion_fatalf_shot_colony: "Открыли огонь по нашим колониальным кораблям!"
- shipsize_seed_ship_build_cost_mult: "Корабль-семя"
- shipsize_seed_ship_construction_speed_mult: "Корабль-семя"
- shipsize_seed_ship_upkeep_mult: "Корабль-семя"
- 
  NAME_OVERGROWTH: "Мицелий"
  NAME_seed_ship: "Корабль-семя"
  NAME_seed_army: "Корабль-семя"
- 
+ opinion_fatalf_lost_country: "Поддержали нашу колонию"
+ opinion_fatalf_shot_colony: "Открыли огонь по нашим колониальным кораблям!"
+ OVERGROWTH: "Мицелий"
+ shipsize_seed_ship_build_cost_mult: "Корабль-семя"
+ shipsize_seed_ship_construction_speed_mult: "Корабль-семя"
+ shipsize_seed_ship_upkeep_mult: "Корабль-семя"
